fixed friend keywords

--- a/cpp05/ex00/Makefile
+++ b/cpp05/ex00/Makefile
@@ -18,21 +18,27 @@ COOL_EMOJI=😎
 NAME = bureaucrat
 
 SRCS = main.cpp Bureaucrat.cpp
-OBJS = $(SRCS:.cpp=.o)
-DEPS = $(SRCS:.cpp=.d)
+OBJ_DIR = obj
+OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
+DEPS = $(OBJS:.o=.d)
 
 CC = c++
 RM = rm -f
+MKDIR = mkdir -p
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 CPPFLAGS = -MMD -MP
 
-all: ${NAME}
+all: $(OBJ_DIR) ${NAME}
+
+$(OBJ_DIR):
+	@$(MKDIR) $(OBJ_DIR)
+	@echo "${BLUE}Carpeta $(OBJ_DIR) creada${RESET}"
 
 ${NAME}: ${OBJS}
 	@${CC} ${CFLAGS} ${OBJS} -o ${NAME}
 	@echo "${SUCCESS_EMOJI} ${GREEN} Successful compilation! ${RESET}"
 
-%.o: %.cpp
+$(OBJ_DIR)/%.o: %.cpp
 	@echo "${CYAN} Compiling $<...${RESET}"
 	@${CC} ${CFLAGS} ${CPPFLAGS} -c $< -o $@
 
@@ -40,7 +46,7 @@ ${NAME}: ${OBJS}
 
 clean:
 	@echo "${CLEAN_EMOJI} ${MAGENTA}Cleaning files...${RESET}"
-	@${RM} ${OBJS} ${DEPS}
+	@${RM} -r ${OBJ_DIR}
 
 fclean: clean
 	@echo "${RECYCLE_EMOJI} ${YELLOW} Removing executable...${RESET}"
@@ -48,4 +54,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re $(OBJ_DIR)
