--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -15,24 +15,30 @@ WARNING_EMOJI=⚠️
 ERROR_EMOJI=❌
 COOL_EMOJI=😎
 
-NAME = doSomethingToForm
+NAME = bureaucrat
 
 SRCS = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp PresidentialPardonForm.cpp
-OBJS = $(SRCS:.cpp=.o)
-DEPS = $(SRCS:.cpp=.d)
+OBJ_DIR = obj
+OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:.cpp=.o))
+DEPS = $(OBJS:.o=.d)
 
 CC = c++
 RM = rm -f
+MKDIR = mkdir -p
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 CPPFLAGS = -MMD -MP
 
-all: ${NAME}
+all: $(OBJ_DIR) ${NAME}
+
+$(OBJ_DIR):
+	@$(MKDIR) $(OBJ_DIR)
+	@echo "${BLUE}Carpeta $(OBJ_DIR) creada${RESET}"
 
 ${NAME}: ${OBJS}
 	@${CC} ${CFLAGS} ${OBJS} -o ${NAME}
 	@echo "${SUCCESS_EMOJI} ${GREEN} Successful compilation! ${RESET}"
 
-%.o: %.cpp
+$(OBJ_DIR)/%.o: %.cpp
 	@echo "${CYAN} Compiling $<...${RESET}"
 	@${CC} ${CFLAGS} ${CPPFLAGS} -c $< -o $@
 
@@ -40,9 +46,8 @@ ${NAME}: ${OBJS}
 
 clean:
 	@echo "${CLEAN_EMOJI} ${MAGENTA}Cleaning files...${RESET}"
-	@${RM} ${OBJS} ${DEPS}
-	@${RM} *_shrubbery
-
+	@${RM} -r ${OBJ_DIR}
+	@find . -name "*_shrubbery" -delete
 
 fclean: clean
 	@echo "${RECYCLE_EMOJI} ${YELLOW} Removing executable...${RESET}"
@@ -50,4 +55,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re $(OBJ_DIR)
